[project]
name = "torch-research-utils"
version = "0.1.0"
description = "PyTorch research utilities."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Davide Tenedini", email = "davide.tenedini@polimi.it" },
]
dependencies = [
    "matplotlib>=3.10.8",
    "matplotlib-stubs>=0.3.11",
    "numpy>=2.4.0",
    "torch>=2.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/torch_research_utils"]

[dependency-groups]
dev = [
    "pyrefly>=0.46.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
